<?xml version="1.0"?>
<package>
  <name>omni_robot_control</name>
  <version>1.0.0</version>
  <description>The omni_robot_control package</description>


  <maintainer email="a@gmail.com">a</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com</url>
  
  <author email="ag@gmail.com">a</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>diff_drive_controller</run_depend>
  <run_depend>velocity_controllers</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>

</package>
