<?xml version="1.0"?>
<package>
  <name>omni_robot_description</name>
  <version>2.0.0</version>
  <description>The omni_robot_description package</description>

  <maintainer email="a@gmail.com">a</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com</url>
  
  <author email="a@gmail.com">a</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>
  
</package>
