<?xml version="1.0"?>
<package>
  <name>omni_robot_gazebo</name>
  <version>1.0.0</version>
  <description>The omni_robot_gazebo package</description>

  <maintainer email="groadpg@gmail.com">a</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com</url>
  
  <author email="a@gmail.com">a</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>omni_robot_bringup</run_depend>
  <run_depend>omni_robot_control</run_depend>
  <run_depend>omni_robot_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>joy_twist</run_depend>
</package>
